Archive2/6e/968ca90e6192db/output
main.cpp:16:20: error: cannot define or redeclare 'bar' here because namespace 'O' does not enclose namespace 'Foo<int>'
    const int Baz::bar = 1;
              ~~~~~^
1 error generated.
